--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body class="body">
     <div>
       <nav class="navbar">
+        <img class="navbar_img" src="./RM.png" alt="" />
         <h2><span class="navbar_h2">Semana da </span>Programação</h2>
         <ul class="navbar_list">
           <li><a href="#">Contato</a></li>
@@ -21,6 +22,8 @@
 
     <main>
       <div class="container">
+        <img class="container_img" src="./RM01.jpeg" alt="" />
+
         <form class="container_form">
           <h1>Inscrição</h1>
 
