--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <img class="navbar_img" src="./RM.png" alt="" />
         <h2><span class="navbar_h2">Semana da </span>Programação</h2>
         <ul class="navbar_list">
-          <li><a href="#">Contato</a></li>
-          <li><a href="#">Saiba Mais</a></li>
+          <li><a href="#">O que iremos abordar...</a></li>
+          <li><a href="#">Requisitos... </a></li>
+          <li><a href="#">Investimento... </a></li>
         </ul>
       </nav>
     </div>
@@ -74,18 +75,52 @@
               <option value="phyton">Phyton</option>
             </select>
           </div>
+
           <br />
           <button>Enviar</button>
         </form>
       </div>
+
+      <div class="saiba_mais">
+        <h2>o que iremos abordar...</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur
+          dignissimos optio cupiditate sint consequuntur, vitae repudiandae!
+          Deserunt maxime at a iste quisquam ad nisi alias consequuntur
+          adipisci, enim magni voluptatem. Lorem ipsum dolor sit, amet
+          consectetur adipisicing elit. Fuga sit, non exercitationem repudiandae
+          vero sed provident aperiam fugit? Odit, assumenda? Iusto ex similique
+          beatae praesentium a blanditiis quis aperiam tempora.
+        </p>
+      </div>
+
+      <div class="requisitos">
+        <h2>Requisitos...</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur
+          dignissimos optio cupiditate sint consequuntur, vitae repudiandae!
+          Deserunt maxime at a iste quisquam ad nisi alias consequuntur
+          adipisci, enim magni voluptatem. Lorem ipsum dolor sit, amet
+          consectetur adipisicing elit. Fuga sit, non exercitationem repudiandae
+          vero sed provident aperiam fugit? Odit, assumenda? Iusto ex similique
+          beatae praesentium a blanditiis quis aperiam tempora.
+        </p>
+      </div>
+
+      <div class="investimento">
+        <h2>Investimento...</h2>
+        <p>
+          $$$$ 123456798 dolor sit amet, consectetur adipisicing elit.
+          Consequatur dignissimos optio cupiditate sint consequuntur, vitae
+          repudiandae! Deserunt maxime at a iste $$$$$ ad nisi alias
+          consequuntur adipisci, enim magni voluptatem. Lorem ipsum dolor sit,
+          amet consectetur adipisicing elit. Fuga sit, non exercitationem
+          repudiandae vero sed provident aperiam fugit? Odit, $$$$$$$vIusto ex
+          similique beatae praesentium a blanditiis quis aperiam tempora.
+        </p>
+      </div>
     </main>
 
-    <footer class="footer">
-      <a href="mailto:sousa.massarutti@icloud.com" target="_blank">
-        Nosso e-mail
-      </a>
-    </footer>
-
-    <hr />
+    <footer class="footer"></footer>
   </body>
 </html>
